[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/main_game/phase1/PairingScreen.gd" type="Script" id=1]
[ext_resource path="res://screens/main_game/BaseGamePhase.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/cards/profile_card/ProfileCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/card_slot/CardSlot.tscn" type="PackedScene" id=5]

[node name="PairingScreen" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="PairCardSlotLeft" parent="." index="0" instance=ExtResource( 5 )]
position = Vector2( 560, 400 )

[node name="PairCardSlotRight" parent="." index="1" instance=ExtResource( 5 )]
position = Vector2( 720, 400 )

[node name="ProfileCard1" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( 238, 232 )
card_title = "Foo 1312"

[node name="ProfileCard2" parent="." index="3" instance=ExtResource( 4 )]
position = Vector2( 639, 187 )
card_title = "Bar 161"

[node name="ProfileCard3" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 1020, 233 )
card_title = "Baz 1337"
